--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
   "name": "form-react",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://miloszpanas.github.io/react-playground-form",
   "dependencies": {
     "axios": "^0.18.0",
     "bootstrap": "^4.3.1",
     "classnames": "^2.2.6",
+    "gh-pages": "^2.0.1",
     "prop-types": "^15.7.2",
     "react": "^16.8.2",
     "react-dom": "^16.8.2",
@@ -14,6 +16,7 @@
     "uuid": "^3.3.2"
   },
   "scripts": {
+    "deploy": "yarn run build&&gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
